bananas scroll top on click, no animation on mobile, misc punchlist fixes

--- a/css/_sliders.scss
+++ b/css/_sliders.scss
@@ -351,6 +351,11 @@
   background-color: #fff;
   padding: em-calc(40) 0;
 
+  .slick-list {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
   figure {
     padding: 0 em-calc(20);
     margin: 0;
